--- a/LoadingPutih/Loading.css
+++ b/LoadingPutih/Loading.css
@@ -11,7 +11,7 @@ body {
     overflow-x: hidden;
    margin: 0;
    padding: 0;
-   background-color: var(--black1);
+   background-color: var(--white);
 
  }
  
@@ -31,30 +31,29 @@ body {
 
 .square, .square2 {
     position: absolute;
-    background-color:  var(--black1);
+    background-color: var(--white);
     transform: rotate(45deg);
 }
 
 .square {
     width: 110px;
     height: 110px;
-    border: 13px solid var(--white);
+    border: 13px solid var(--black1);
     z-index: 1;
-    background: var(--white);
+    background: rgba(255, 255, 255, 0.768); 
     animation: sweepSquare 2.5s ease forwards, sweepSquareReverse 1s ease 5.5s forwards;
-    transform: rotate(45deg); /* Menetapkan rotasi awal */
+    transform: rotate(45deg);
 }
 
 .square2 {
     width: 167px;
     height: 167px;
-    border: 20px solid var(--white);
+    border: 20px solid var(--black1);
     z-index: 0;
-    background: var(--white);
+    background: rgba(255, 255, 255, 0.768); 
     animation: sweepSquare2 2.5s ease forwards, sweepSquare2Reverse 1s ease 5.5s forwards;
-    transform: rotate(45deg); /* Menetapkan rotasi awal */
+    transform: rotate(45deg); 
 }
-
 
 @keyframes sweepSquare {
     0% {
@@ -155,23 +154,23 @@ body {
 .line1, .line2 {
     position: fixed;
     height: 2px; 
-    background-color: var(--white);
-    box-shadow: 0 0 15px 2px var(--white);
+    background-color: var(--black1);
+    box-shadow: 0 0 15px 2px var(--black1);
     z-index: -1;
-    transform: scaleX(0); /* Mula-mula, set scale X ke 0 untuk menghilangkan garis */
+    transform: scaleX(0); 
 }
 
 .line1 {
     position: absolute;
-    width: 100%; /* Ubah dari 200% ke 100% untuk hanya melebar ke satu arah */
+    width: 100%; 
     left: 0; 
     animation: slideInFromCenter 1s ease forwards 2.6s, line1Up 1.5s ease forwards 6.5s;
 }
 
 .line2 {
     position: absolute;
-    width: 100%; /* Ubah dari 200% ke 100% untuk hanya melebar ke satu arah */
-    right: 0; /* Gunakan right untuk melebar ke arah kanan */
+    width: 100%; 
+    right: 0; 
     animation: slideInFromCenter 1s ease forwards 2.6s, line2Down 1.5s ease forwards 6.5s; 
 }
 
@@ -184,7 +183,7 @@ body {
     }
 }
 
-/* Keyframes untuk animasi line1 naik */
+
 @keyframes line1Up {
     0% {
         transform: scaleY(0);
@@ -194,7 +193,7 @@ body {
     }
 }
 
-/* Keyframes untuk animasi line2 naik */
+
 @keyframes line2Down {
     0% {
         transform: scaleY(0);
@@ -218,17 +217,21 @@ body {
 
 
 
+
+
+
+
 @media (max-width: 480px){
     .square {
         width: 50px;
         height: 50px;
-        border: 8px solid var(--black1);
+        border: 8px solid var(--white);
     }
     
     .square2 {
         width: 79px;
         height: 79px;
-        border: 12px solid var(--black1);
+        border: 12px solid var(--white);
     }
 
     .Font-image {
