--- a/HalamanUtama/Index.css
+++ b/HalamanUtama/Index.css
@@ -474,9 +474,10 @@ body {
 }
 
 .about-container {
-  background-color: var(--black2);  
+  background-color: var(--black2);
   text-align: justify;  
-  width: 50%;
+  width: 37%;
+  min-width: 10%; 
   margin-top: 200px; 
   margin-left: 200px;
   padding: 20px;
@@ -498,7 +499,7 @@ body {
 
 .container-text {
   color: var(--white);  
-  font-size: 18px;  
+  font-size: 15px;  
   line-height: 1.5;
   font-family: 'Poppins', sans-serif;
   text-align: justify;  
@@ -620,6 +621,98 @@ body {
     font-size: 10px;
     font-weight: bold;
 }
+
+/*====================================== Container Photo ====================================*/
+.container-photo {
+  position: absolute;
+  top: 730px;
+  right: 220px;
+  background-color: var(--black2);
+  width: 320px;
+  height: 320px; 
+
+}
+
+.photo {
+  width: 90%; 
+  height: auto;
+  z-index: 1;
+  position: absolute;
+  top: 50%; 
+  left: 50%; 
+  transform: translate(-50%, -50%); 
+}
+
+.container-border1, .container-border2 {
+  position: absolute;
+  border: 5px solid var(--white); 
+  width: 305px; 
+  height: 305px; 
+  z-index: 2; 
+  background-color: transparent; 
+  transition: all 0.3s ease;
+}
+
+.container-border1 {
+  top: 13px; 
+  left: 11px; 
+}
+
+.container-border2 {
+  top: -7px; 
+  left: -7px; 
+}
+
+
+.container-photo:hover .container-border1 {
+  width: 282px; 
+  height: 282px;
+  top: 13px; 
+  left: 13px; 
+}
+
+.container-photo:hover .container-border2 {
+  width: 282px; 
+  height: 282px;
+  top: 13px; 
+  left: 13px; 
+}
+
+.expand-button {
+  position: absolute;
+  z-index: 10; 
+  top: 17px; 
+  right: 17px;
+  justify-content: center;
+  align-items: center; 
+  display: none;
+  padding: -1px;
+  border: none;
+  background-color: transparent;
+  border-radius: 0;
+  cursor: pointer; 
+  transition: all 0.3s ease;
+}
+
+.container-photo:hover .expand-button {
+  display: flex; 
+}
+
+.expand-button ion-icon {
+  font-size: 25px; 
+  color: greenyellow;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1119,7 +1212,7 @@ body {
   text-align: left;
   width: 70%;
   height: auto;
-  margin-top: 200px;
+  margin-top: 500px;
   margin-left: 50px;
   padding: 20px;
   border-radius: 15px;
@@ -1140,5 +1233,18 @@ body {
   color: #ffffff;
   line-height: 1.5;
 }
+
+/*====================================== Container Photo ====================================*/
+.container-photo {
+  position: absolute; /* or 'fixed' if you want it to stay in place on scroll */
+  top: 900px; /* Center vertically */
+  left: 50%; /* Center horizontally */
+  transform: translate(-50%, -50%); /* Adjust position to exact center */
+  background-color: var(--black2);
+  width: 320px; /* Or any size you want */
+  height: 320px; /* Or any size you want */
+  z-index: 0;
+}
+
 
   }
