--- a/HalamanUtama/Index.css
+++ b/HalamanUtama/Index.css
@@ -388,7 +388,7 @@ body {
 .container {
   background-color: var(--black2);
   text-align: left;
-  width: 50%;
+  width: 60%;
   margin-top: 100px;
   margin-left: 200px;
   padding: 20px;
@@ -407,7 +407,7 @@ body {
 
 .green-text {
   color: #00FF00;
-  font-size: 18px;
+  font-size: 15px;
   font-weight: bold;
   font-family: 'Poppins', sans-serif;
 }
@@ -474,12 +474,14 @@ body {
 }
 
 .about-container {
+  position: absolute;
+  right: 550px;
+  margin-left: 200px;
   background-color: var(--black2);
   text-align: justify;  
-  width: 37%;
-  min-width: 10%; 
+  max-width: 38%; 
+  min-width: 10%;
   margin-top: 200px; 
-  margin-left: 200px;
   padding: 20px;
   border-radius: 15px;
   animation: slideUpFadeIn 1s ease-out; 
@@ -625,12 +627,19 @@ body {
 /*====================================== Container Photo ====================================*/
 .container-photo {
   position: absolute;
-  top: 730px;
+  top: 740px;
   right: 220px;
   background-color: var(--black2);
   width: 320px;
   height: 320px; 
 
+}
+
+@media (max-width: 1016px){
+  .container-photo {
+    position: absolute;
+    top: 850px;
+  }
 }
 
 .photo {
@@ -845,7 +854,7 @@ body {
       }
 
       .show-search {
-        transform: translateX(0%); /* Geser kembali ke posisi semula */
+        transform: translateX(0%); 
       }
 
 
@@ -972,7 +981,95 @@ body {
     font-size: 10px;
 }
 
+
+/*====================================== Container1 ====================================*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+
+@keyframes slideUpFadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
+
+.container {
+  background-color: var(--black2);
+  text-align: left;
+  width: 90%;
+  margin-top: 100px;
+  margin-left: 5px;
+  padding: 20px;
+  border-radius: 15px;
+  animation: slideUpFadeIn 1s ease-out;
+  z-index: 0;
+  overflow-x: hidden;
+}
+
+
+/*====================================== Container Photo ====================================*/
+.container-photo {
+  position: absolute;
+  top: 730px;
+  right: 30px;
+  background-color: var(--black2);
+  width: 320px;
+  height: 320px; 
+
+}
+
+@media (max-width: 624px){
+  .container-photo {
+    position: absolute;
+    top: 800px;
+  
+  }
+}
+
+
+
+/*====================================== Container2 ====================================*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+
+.about-container {
+  position: absolute;
+  right: 350px;
+  margin-left: 5px;
+  background-color: var(--black2);
+  text-align: justify;  
+  max-width: 50%; 
+  min-width: 10%;
+  margin-top: 180px; 
+  padding: 20px;
+  border-radius: 15px;
+  animation: slideUpFadeIn 1s ease-out; 
+  z-index: 0;
+}
+
     }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1130,69 +1227,72 @@ body {
 
 
 .container {
-  background-color: rgb(0, 0, 0);
+  position: absolute;
+  background-color: var(--black2);
   text-align: left;
-  margin-top: 100px;
-  margin-left: 50px;
+  margin-top: 120px;
+  margin-left: 10px;
+  margin-right: 10px;
   padding: 20px;
   border-radius: 15px;
   animation: slideUpFadeIn 1s ease-out;
 }
 
-/* General text styling */
+
 .container p {
   margin-bottom: 15px;
   line-height: 1.5;
 }
 
-/* Styling for the first text (green color, small size) */
+
 .green-text {
   color: #00FF00;
   font-size: 18px;
   font-weight: bold;
-  font-family: 'Oswald', sans-serif;  /* Oswald font */
+  font-family: 'Poppins', sans-serif;
 }
 
-/* Styling for the second text (white color, large size) */
+
 .gray-text {
-  color: #FFFFFF;
-  font-size: 36px;
-  font-family: 'Roboto', sans-serif;  /* Roboto font */
-  font-weight: 900;  /* Highest weight for Roboto */
+  color: var(--white);
+  font-size: 30px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 900; 
 }
 
-/* Styling for the third text (gray color, large size) */
+
 .white-text {
-  color: #A9A9A9;
+  color: grey;
   font-size: 24px;
   font-style: italic;
-  font-weight: 900;  /* Highest weight for Roboto */
-  font-family: 'Roboto', sans-serif;  /* Roboto font */
+  font-weight: 700; 
+  font-family: 'Poppins', sans-serif;
 }
 
-/* Styling for additional text */
+
 .additional-text {
-  color: #ffffff;
+  color: var(--white);
   font-size: 16px;
+  font-weight: 0;  
   text-align: justify;
-  font-family: 'Oswald', sans-serif;  /* Oswald font */
+  font-family: 'Poppins', sans-serif;
 }
 
 
 
 
 .contact-button {
-  background-color: #000000;  /* Black */
-  color: #FFFFFF;
-  margin-top: 30px;  /* White text */
-  padding: 10px 20px;  /* Padding for size */
-  font-size: 18px;  /* Text size */
-  border: 2px solid #FFFFFF;  /* White border */
-  border-radius: 5px;  /* Rounded corners */
-  cursor: pointer;  /* Hand cursor on hover */
-  font-family: 'Roboto', sans-serif;  /* Using the Roboto font */
-  font-weight: 900;  /* Highest weight for emphasis */
-  transition: background-color 0.3s ease, color 0.3s ease;  /* Transition for hover effect */
+  background-color: var(--black1);
+  color: var(--white);
+  margin-top: 30px;  
+  padding: 10px 20px;  
+  font-size: 18px; 
+  border: 2px solid var(--white);
+  border-radius: 5px; 
+  cursor: pointer; 
+  font-family: 'Poppins', sans-serif;
+  font-weight: 900; 
+  transition: background-color 0.3s ease, color 0.3s ease;  
 }
 
 .contact-button:hover {
@@ -1208,18 +1308,20 @@ body {
 /*====================================== Container2 ====================================*/
 
 .about-container {
-  background-color: rgb(0, 0, 0);
+  position: absolute;
+  background-color: var(--black2);
   text-align: left;
-  width: 70%;
-  height: auto;
-  margin-top: 500px;
-  margin-left: 50px;
+  margin-top: 1120px;
+  left: 10px;
+  margin-right: 10px;
   padding: 20px;
   border-radius: 15px;
   animation: slideUpFadeIn 1s ease-out;
+  width: 85%; 
+  max-width: none;
 }
 
-/* Styling for the title */
+
 .container-title {
   font-size: 24px;
   font-weight: bold;
@@ -1227,18 +1329,18 @@ body {
   color: #01db1a;
 }
 
-/* Styling for the content text */
+
 .container-text {
   font-size: 18px;
-  color: #ffffff;
+  color: var(--white);
   line-height: 1.5;
 }
 
 /*====================================== Container Photo ====================================*/
 .container-photo {
-  position: absolute; /* or 'fixed' if you want it to stay in place on scroll */
-  top: 900px; /* Center vertically */
-  left: 50%; /* Center horizontally */
+  position: absolute; 
+  top: 830px;
+  left: 50%; 
   transform: translate(-50%, -50%); /* Adjust position to exact center */
   background-color: var(--black2);
   width: 320px; /* Or any size you want */
