--- a/HalamanUtama/Index.css
+++ b/HalamanUtama/Index.css
@@ -5,7 +5,7 @@
   --gray :#f5f5f5;
   --black1 :#000000;
   --black2 :rgb(15, 15, 15);
-  --Green  : rgb(48, 183, 48);
+  --cyan  :#00CFFA;
 }
 
 body {
@@ -32,7 +32,7 @@ body {
  transition-duration: 1s;
  opacity: 0;
  overflow-x: hidden;
- z-index: 1;
+ z-index: 4;
  
 }
 
@@ -57,7 +57,7 @@ box-shadow: 0 1px 7px 0 var(--white);
 transform: translateY(-100%); /* Mulai dari luar layar di atas */
 opacity: 0; /* Awalnya transparan */
 transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out; 
-z-index: 1;
+z-index: 4;
 }
 
 
@@ -67,7 +67,7 @@ opacity: 1;
 }
 
 .highlight {
-background-color: greenyellow;
+background-color: var(--cyan);
 color: var(--white);
 }
 
@@ -124,7 +124,7 @@ font-size: 25px;
 position: relative;
 top: -35px;
 padding-bottom: 0px;
-background-color: rgba(255, 255, 255, 0);
+background-color: transparent;
 margin-left: 310px;
 width: 260px; 
 height: 60px; 
@@ -259,7 +259,7 @@ display: none;
 }
 
 .about.active {
-color: var(--Green);
+color: var(--cyan);
 font-weight: bold;
 
 }
@@ -272,7 +272,7 @@ bottom: 0;
 left: 50%;
 width: 0;
 height: 2px;
-background-color: var(--Green);
+background-color: var(--cyan);
 transition: width 0.3s ease-in-out, left 0.3s ease-in-out;
 }
 
@@ -345,7 +345,7 @@ transition: top 0.2s, bottom 0.2s;
 .social-icons ion-icon:hover {
  transform: translateY(-6px); 
  transition: transform 0.2s ease;
- color: var(--blue);
+ color: var(--cyan);
 }
 
 .email-container {
@@ -368,7 +368,7 @@ transition: top 0.2s, bottom 0.2s;
 .email-container .email-text:hover {
  transform: translateY(-7px); /* Move the text slightly up on hover */
  transition: transform 0.2s ease; /* Add a smooth transition effect */
- color: cornflowerblue;
+ color: var(--cyan);
 }
 
 .vertical-line1, .vertical-line2 {
@@ -434,7 +434,7 @@ line-height: 1.5;
 
 
 .green-text {
-color: #00FF00;
+color: var(--cyan);
 font-size: 15px;
 font-weight: bold;
 font-family: 'Poppins', sans-serif;
@@ -449,7 +449,7 @@ font-weight: 900;
 
 
 .white-text {
-color: var(--gray);
+color: var(--cyan);
 font-size: 24px;
 font-style: italic;
 font-weight: 900; 
@@ -518,7 +518,7 @@ z-index: 0;
 
 
 .container-title {
-color: #00FF00; 
+color: var(--cyan); 
 font-size: 24px; 
 font-weight: bold;
 font-family: 'Poppins', sans-serif;
@@ -537,7 +537,134 @@ text-align: justify;
 
 
 
+/*====================================== carousel  ====================================*/
+.container-carousel {
+  position: absolute;
+  top: 230%; 
+  left: 50%; 
+  transform: translate(-50%, -50%); 
+  width: 65%;
+  border-radius: 15px;
+  height: 500px;
+  background-color: transparent;
+  overflow: hidden;
+  padding: 20px;
+}
 
+.slide1,
+.slide2,
+.slide3,
+.slide4 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 79%;
+  min-width: 5%;
+  margin-right: 100px;
+  margin-left: 0px;
+  border-radius: 15px;
+  height: 400px;
+  background-color: transparent;
+  padding: 20px;
+  z-index: 2;
+  overflow: hidden;
+  transform: translate(-50%, -50%);
+  transition: transform 0.5s ease;
+}
+
+.left-slide {
+  position: absolute;
+  left: 5px;
+  top: 50%;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
+}
+
+.left-slide ion-icon {
+  font-size: 50px;
+  color: var(--white);
+}
+
+.right-slide {
+  position: absolute;
+  right: 5px;
+  margin-left: 780px;
+  top: 50%;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
+}
+
+.right-slide ion-icon {
+  font-size: 50px;
+  color: var(--white);
+}
+
+.slide1 img {
+  position: absolute;
+  margin-left: 0px;
+  margin-right: 100px;
+  max-width: 160%;
+  min-width: 10%;
+  height: 170%;
+  object-fit: contain; 
+  top: 18%; 
+  left: 50%; 
+  transform: translate(-50%, -50%);
+}
+
+.slide2 img {
+  position: absolute;
+  margin-left: 0px;
+  margin-right: 100px;
+  max-width: 160%;
+  min-width: 10%;
+  height: 170%;
+  object-fit: contain; 
+  top: 18%; 
+  left: 50%; 
+  transform: translate(-50%, -50%);
+}
+
+/*====================================== slide1 ====================================*/
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap");
+
+.slide1-container {
+  position: absolute;
+  top: 68%; /* Center vertically */
+  left: 50%; /* Center horizontally */
+  transform: translate(-50%, -50%); /* Adjust to perfectly center */
+  background-color: transparent;
+  text-align: justify;
+  width: 95%;
+  min-width: 10%;
+  padding: 20px;
+  border-radius: 15px;
+  animation: slideUpFadeIn 1s ease-out;
+  z-index: 0;
+}
+
+.container-title {
+  color: var(--cyan);
+  font-size: 24px;
+  font-weight: bold;
+  font-family: "Poppins", sans-serif;
+  margin-bottom: 10px;
+  text-align: left;
+}
+
+.container-text {
+  color: var(--white);
+  font-size: 15px;
+  line-height: 1.5;
+  font-family: "Poppins", sans-serif;
+  text-align: justify;
+}
 
 
 
@@ -583,7 +710,7 @@ text-align: justify;
 
 
 .sidebar ul li a:hover {
- background-color: rgba(0, 128, 0, 0.514);
+ background-color: #00d0fa88;
  color: var(--white); 
  border-top-left-radius: 15px;  
  border-bottom-left-radius: 15px;
@@ -679,7 +806,6 @@ height: 320px;
 .photo {
 width: 90%; 
 height: auto;
-z-index: 1;
 position: absolute;
 top: 50%; 
 left: 50%; 
@@ -688,7 +814,6 @@ transition: transform 0.3s ease, opacity 0.5s ease;
 will-change: transform, opacity;
 transform: translate(-50%, -50%); 
 }
-
 
 
 
@@ -701,7 +826,7 @@ width: 100%;
 height: 100%;
 cursor:default;
 background-color: var(--black2);
-z-index: 5; 
+z-index: 6; 
 opacity: 0; /* Start with a transparent overlay */
 transition: opacity 0.3s ease;
 overflow-y: hidden;
@@ -741,7 +866,7 @@ position: fixed;
 top: 50%;
 left: 50%;
 transform: translate(-50%, -50%) scale(1.2);
-z-index: 5; 
+z-index: 7; 
 }
 
 .overlay.active {
@@ -810,7 +935,7 @@ display: block;
 
 .expand-button ion-icon {
 font-size: 25px; 
-color: greenyellow;
+color: var(--cyan);
 }
 
 
@@ -1336,7 +1461,7 @@ to {
 position: absolute;
 background-color: transparent;
 text-align: left;
-width: 345px;
+width: 350px;
 margin-top: 90px;
 margin-left: 10px;
 margin-right: 10px;
@@ -1353,7 +1478,7 @@ line-height: 1.5;
 
 
 .green-text {
-color: var(--Green);
+color: var(--cyan);
 font-size: 16px;
 font-weight: bold;
 font-family: 'Poppins', sans-serif;
@@ -1403,9 +1528,9 @@ transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .contact-button:hover {
-background-color: #FFFFFF;  /* White */
-color: #000000;  /* Black text */
-border: 2px solid #000000;  /* Black border on hover */
+background-color: #FFFFFF; 
+color: #000000; 
+border: 2px solid #000000; 
 }
 
 
@@ -1433,7 +1558,7 @@ max-width: none;
 font-size: 24px;
 font-weight: bold;
 margin-bottom: 10px;
-color: #01db1a;
+color: var(--cyan);
 }
 
 
@@ -1466,7 +1591,134 @@ line-height: 1.5;
   z-index: 7;
     }
   
+/*====================================== carousel  ====================================*/
+.container-carousel {
+  position: absolute;
+  top: 230%; 
+  left: 50%; 
+  transform: translate(-50%, -50%); 
+  width: 80%;
+  border-radius: 15px;
+  height: 530px;
+  background-color: transparent;
+  overflow: hidden;
+  padding: 20px;
+}
 
+.slide1,
+.slide2,
+.slide3,
+.slide4 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 70%;
+  min-width: 5%;
+  margin-right: 0px;
+  margin-left: 0px;
+  border-radius: 15px;
+  height: 450px;
+  background-color: transparent;
+  padding: 20px;
+  z-index: 2;
+  overflow: hidden;
+  transform: translate(-50%, -50%);
+  transition: transform 0.5s ease;
+}
+
+.left-slide {
+  position: absolute;
+  left: -2px;
+  top: 50%;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
+}
+
+.left-slide ion-icon {
+  font-size: 34px;
+  color: var(--white);
+}
+
+.right-slide {
+  position: absolute;
+  right: -2px;
+  margin-left: 790px;
+  top: 50%;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
+}
+
+.right-slide ion-icon {
+  font-size: 34px;
+  color: var(--white);
+}
+
+.slide1 img {
+  position: absolute;
+  margin-left: 0px;
+  margin-right: 100px;
+  max-width: 160%;
+  min-width: 10%;
+  height: 170%;
+  object-fit: contain; 
+  top: 10%; 
+  left: 48%; 
+  transform: translate(-50%, -50%);
+}
+
+.slide2 img {
+  position: absolute;
+  margin-left: 0px;
+  margin-right: 100px;
+  max-width: 160%;
+  min-width: 10%;
+  height: 170%;
+  object-fit: contain; 
+  top: 10%; 
+  left: 48%; 
+  transform: translate(-50%, -50%);
+}
+
+/*====================================== slide1 ====================================*/
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap");
+
+.slide1-container {
+  position: absolute;
+  top: 55%; /* Center vertically */
+  left: 50%; /* Center horizontally */
+  transform: translate(-50%, -50%); /* Adjust to perfectly center */
+  background-color: transparent;
+  text-align: justify;
+  width: 95%;
+  min-width: 10%;
+  padding: 20px;
+  border-radius: 15px;
+  animation: slideUpFadeIn 1s ease-out;
+  z-index: 0;
+}
+
+.container-title {
+  color: var(--cyan);
+  font-size: 20px;
+  font-weight: bold;
+  font-family: "Poppins", sans-serif;
+  margin-bottom: 10px;
+  text-align: left;
+}
+
+.container-text {
+  color: var(--white);
+  font-size: 15px;
+  line-height: 1.5;
+  font-family: "Poppins", sans-serif;
+  text-align: justify;
+}
 
 
 
