--- a/HalamanUtama/Index.css
+++ b/HalamanUtama/Index.css
@@ -3,8 +3,10 @@
   --blue:#3d31b9;
   --white: #ffffff;
   --gray :#F6F8FA;
+  --navp :#ffffff7a;
   --black1 :#010409;
   --black2 :#0D1117;
+  --navb : #0d1117d2;
   --cyan  :#00CFFA;
 }
 
@@ -15,6 +17,34 @@ body {
  background-color: var(--black2);
  overflow-x: hidden;
 
+}
+
+/*====================================== scrool sistem ====================================*/
+
+body::-webkit-scrollbar {
+  width: 6px;  
+  height: 10px;
+  border-radius: 30px;
+}
+
+body::-webkit-scrollbar-track {
+  margin-right: 5px;
+  background: var(--black2);  
+}
+
+body::-webkit-scrollbar-thumb {
+  background: var(--cyan);  
+  border-radius: 15px;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background: var(--cyan);  
+}
+
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--cyan) #f1f1f1;
 }
 
 
@@ -45,25 +75,30 @@ left: 0;
 margin-top: 0px;
 margin-right: auto; 
 margin-left: auto; 
-background-color: var(--black1); 
+background-color: var(--navb); 
 padding: 0; 
 height: 85px;
 border-radius: 0px; 
 width: 110%; 
 max-width: 6000px; 
 box-sizing: border-box; 
-border-bottom: 2px solid var(--white);
-box-shadow: 0 1px 7px 0 var(--white);
 transform: translateY(-100%); /* Mulai dari luar layar di atas */
 opacity: 0; /* Awalnya transparan */
-transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out; 
+backdrop-filter: blur(10px);
+box-shadow: none;
+transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out, background-color 0.5s ease-in-out,box-shadow 0.3s ease-in-out;; 
 z-index: 4;
 }
 
 
 .nav-container.show {
-transform: translateY(0); 
-opacity: 1; 
+  transform: translateY(0); 
+  opacity: 1;
+  backdrop-filter: blur(30px);
+}
+
+.nav-container.not-at-top {
+  box-shadow: 0px 0px 15px 2px rgba(0, 0, 0, 0.174);
 }
 
 .highlight {
@@ -75,11 +110,11 @@ color: var(--white);
 /*====================================== LOGO ICON NAVIGATION ====================================*/
 .logo img {
 position: relative;
-max-height: 70px;
-margin-left: 400px;
+max-height: 60px;
+margin-left: 200px;
 margin-bottom: -48px;
 z-index: 2; 
-top: -1px;
+top: -5px;
 cursor: pointer; 
 }
 
@@ -212,7 +247,7 @@ transition: transform 0.5s ease;
 .navigation {
 position: relative;
 top: 4px;
-left: -250px; 
+left: -150px; 
 font-family: 'Poppins', sans-serif;
 z-index: 2;
 }
@@ -240,8 +275,7 @@ text-decoration: none !important;
 position: relative; 
 text-decoration: none;
 color: var(--white); 
-font-size: 16px;
-font-weight: bold;
+font-size: 13px;
 font-family: 'Poppins', sans-serif;
 transition: color 0.3s ease;
 z-index: 2;
@@ -287,10 +321,11 @@ width: 100%;
 
 #cv-button {
 background-color: var(--black1);
-color: var(--white);
-border: 2px solid var(--white);
-padding: 10px 20px;
+color: var(--cyan);
+border: 2px solid var(--cyan);
+padding: 10px 10px;
 text-decoration: none;
+border-radius: 5px;
 position: relative;
 z-index: 2;
 transition: top 1s ;
@@ -298,10 +333,11 @@ transition: top 1s ;
 
 #cv-background { 
 position: absolute;
-margin-top: 10PX;
-width: 65.70px;  
-height: 20px; 
-background-color: var(--white);
+margin-top: -10px;
+width: 72.5px;  
+height: 40px; 
+border-radius: 5px;
+background-color: var(--cyan);
 right: 20PX; 
 z-index: 1;
 }
@@ -316,8 +352,9 @@ margin-right: 20px;
 
 
 #cv-button:hover {
-top: -4px; 
-transition: top 0.2s, bottom 0.2s;
+  left: -2px;
+  top: -2px; 
+  transition: transform 8s;
 }
 /*====================================== social button ====================================*/
 
@@ -339,7 +376,7 @@ transition: top 0.2s, bottom 0.2s;
 }
 .social-icons {
  bottom: 20px;  
- left: 60px;  
+ left: -19px;  
 }
 
 .social-icons ion-icon:hover {
@@ -350,19 +387,20 @@ transition: top 0.2s, bottom 0.2s;
 
 .email-container {
  bottom: 20px;  
- right: 60px;  
+ right: -10px;  
 }
 
 .social-icons ion-icon {
- font-size: 30px;
- margin: 5px;
+ font-size: 25px;
+ margin: 10px;
  color: var(--white);  /* Warna ikon putih */
 }
 
 .email-text {
  writing-mode: vertical-rl;
+ font-family: 'Poppins', sans-serif;
  color: var(--white);  /* Warna teks putih */
- font-size: 24px;
+ font-size: 18px;
 }
 
 .email-container .email-text:hover {
@@ -373,7 +411,7 @@ transition: top 0.2s, bottom 0.2s;
 
 .vertical-line1, .vertical-line2 {
  width: 1px;
- height: 150px;
+ height: 90px;
  background-color: var(--white);  /* Warna garis vertikal putih */
  margin: 5px;
 }
@@ -414,11 +452,11 @@ to {
 
 
 .container {
-background-color: var(--black2);
+background-color: transparent;
 text-align: left;
 width: 60%;
 margin-top: 100px;
-margin-left: 200px;
+margin-left: 135px;
 padding: 20px;
 border-radius: 15px;
 animation: slideUpFadeIn 1s ease-out;
@@ -428,8 +466,7 @@ overflow-x: hidden;
 
 
 .container p {
-margin-bottom: 15px;
-line-height: 1.5;
+  line-height: 1.5;
 }
 
 
@@ -438,11 +475,14 @@ color: var(--cyan);
 font-size: 15px;
 font-weight: bold;
 font-family: 'Poppins', sans-serif;
+margin-bottom: -20px;
 }
 
 .gray-text {
+  position: relative;
+  margin-bottom: -50px;
 color: var(--white);
-font-size: 36px;
+font-size: 50px;
 font-family: 'Poppins', sans-serif; 
 font-weight: 900; 
 }
@@ -450,20 +490,20 @@ font-weight: 900;
 
 .white-text {
 color: var(--cyan);
-font-size: 24px;
-font-style: italic;
+font-size: 50px;
 font-weight: 900; 
 font-family: 'Poppins', sans-serif; 
 }
 
 
 .additional-text {
-color: var(--white);
-font-size: 16px;
-text-align: justify;
-font-family: 'Poppins', sans-serif;
+  position: relative;
+  color: var(--white);
+  font-size: 16px;
+  text-align: justify;
+  font-family: 'Poppins', sans-serif;
+  margin-right: 260px; /* Atur margin kanan sesuai kebutuhan */
 }
-
 
 
 
@@ -505,12 +545,13 @@ to {
 position: absolute;
 right: 550px;
 margin-left: 200px;
-background-color: var(--black2);
+background-color: transparent;
 text-align: justify;  
 max-width: 38%; 
 min-width: 10%;
 margin-top: 200px; 
 padding: 20px;
+overflow: hidden;
 border-radius: 15px;
 animation: slideUpFadeIn 1s ease-out; 
 z-index: 0;
@@ -518,12 +559,27 @@ z-index: 0;
 
 
 .container-title {
+position: relative;
+display: inline-block; 
 color: var(--cyan); 
 font-size: 24px; 
 font-weight: bold;
 font-family: 'Poppins', sans-serif;
 margin-bottom: 10px;
 text-align: left;  
+margin-right: 30px;
+}
+
+
+.container-title::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 100%;
+  width:500px; /* mengatur lebar garis */
+  height: 1px;
+  background-color: gray;
+  margin-left: 10px; /* Jarak dari judul ke garis */
 }
 
 
@@ -860,8 +916,8 @@ font-size: 20px;
 
 .photo.expanded {
 width: auto;  
-max-width: 60%; 
-max-height: 60%; 
+max-width: 70%; 
+max-height: 70%; 
 position: fixed; 
 top: 50%;
 left: 50%;
@@ -981,6 +1037,12 @@ color: var(--cyan);
 
 
 
+
+
+
+
+
+
 @media (max-width: 892px){
  .trail {
   overflow-x: hidden;
@@ -1033,12 +1095,12 @@ color: var(--cyan);
      position: relative;
      margin-left: 18px ;
      left: 0px;
-     top: -5px;
+     top: 0px;
    }
 
    .terang{
        position: absolute;
-       top: 30px;
+       top: 25px;
    }
 
    .terang ion-icon {
@@ -1048,7 +1110,7 @@ color: var(--cyan);
 
    .cari {
      position: relative;
-     top: 30px;
+     top: 25px;
      margin-left: 15px;
    }
 
@@ -1380,7 +1442,7 @@ z-index: 0;
    
    .cari {
      position: relative;
-     top: 35px;
+     top: 30px;
      margin-left: 10px;
    }
 
@@ -1407,7 +1469,7 @@ z-index: 0;
      position: relative;
      margin-left: 25px ;
      left: 0px;
-     top: -11px;
+     top: -8px;
    }
 
    .close-search {
@@ -1458,7 +1520,6 @@ to {
 
 
 .container {
-position: absolute;
 background-color: transparent;
 text-align: left;
 width: 320px;
@@ -1472,39 +1533,45 @@ animation: slideUpFadeIn 1s ease-out;
 
 
 .container p {
-margin-bottom: 15px;
+margin-bottom: -30px;
 line-height: 1.5;
 }
 
 
 .green-text {
+position: absolute;
+margin-bottom: 35px;
 color: var(--cyan);
-font-size: 16px;
+font-size: 15px;
 font-weight: bold;
 font-family: 'Poppins', sans-serif;
 }
 
 
 .gray-text {
+position: relative;
+margin-top: 50px;
 color: var(--white);
-font-size: 25px;
+font-size: 30px;
 font-family: 'Poppins', sans-serif;
 font-weight: 900; 
 }
 
 
 .white-text {
-color: grey;
-font-size: 20px;
-font-style: italic;
-font-weight: 700; 
+color: var(--cyan);
+font-size: 30px;
+font-weight: 700;
+line-height: -1;
 font-family: 'Poppins', sans-serif;
 }
 
 
 .additional-text {
 color: var(--white);
-font-size: 16px;
+font-size: 14px;
+margin-top: 50px;
+margin-right: 0px;
 font-weight: 0;  
 text-align: justify;
 font-family: 'Poppins', sans-serif;
@@ -1514,17 +1581,17 @@ font-family: 'Poppins', sans-serif;
 
 
 .contact-button {
-background-color: var(--black1);
-color: var(--white);
-margin-top: 30px;  
-padding: 10px 20px;  
-font-size: 18px; 
-border: 2px solid var(--white);
-border-radius: 5px; 
-cursor: pointer; 
-font-family: 'Poppins', sans-serif;
-font-weight: 900; 
-transition: background-color 0.3s ease, color 0.3s ease;  
+  margin-top: 70px;
+  background-color: var(--black1);
+  color: var(--white);
+  padding: 10px 20px;  
+  font-size: 18px; 
+  border: 2px solid var(--white);
+  border-radius: 5px; 
+  cursor: pointer; 
+  font-family: 'Poppins', sans-serif;
+  font-weight: 900; 
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .contact-button:hover {
@@ -1543,11 +1610,12 @@ border: 2px solid #000000;
 position: absolute;
 background-color: var(--black2);
 text-align: left;
-margin-top: 1120px;
+margin-top: 180px;
 left: 10px;
 margin-right: 10px;
 padding: 20px;
 border-radius: 15px;
+overflow: hidden;
 animation: slideUpFadeIn 1s ease-out;
 width: 85%; 
 max-width: none;
@@ -1555,12 +1623,24 @@ max-width: none;
 
 
 .container-title {
+position: relative;
+display: inline-block; 
 font-size: 24px;
 font-weight: bold;
 margin-bottom: 10px;
 color: var(--cyan);
 }
 
+.container-title::after {
+  content: ''; 
+  position: absolute;
+  top: 50%; 
+  left: 100%; 
+  width: 220px; 
+  height: 1px; 
+  background-color: gray; 
+  margin-left: 10px; 
+}
 
 .container-text {
 font-size: 18px;
@@ -1571,14 +1651,14 @@ line-height: 1.5;
 /*====================================== Container Photo ====================================*/
 .container-photo {
   position: absolute;
-  top: 835px;
+  top: 1200px;
   bottom: 0;
   left: 0;
   right: 0;
   margin: auto;
   background-color: var(--black2);
-  width: 320px;
-  height: 320px;
+  width: 250px;
+  height: 250px;
 }
 
 
@@ -1591,10 +1671,73 @@ line-height: 1.5;
   z-index: 7;
     }
   
+    .container-border1, .container-border2 {
+      position: absolute;
+      border: 5px solid var(--white); 
+      width: 240px; 
+      height: 240px; 
+      z-index: 2; 
+      background-color: transparent; 
+      transition: all 0.3s ease;
+      }
+      
+      .container-border1 {
+      top: 12px; 
+      left: 10px; 
+      }
+      
+      .container-border2 {
+      top: -8px; 
+      left: -7px; 
+      }
+      
+      
+      .container-photo:hover .container-border1 {
+      width: 220px; 
+      height: 220px;
+      top: 12px; 
+      left: 10px; 
+      }
+      
+      .container-photo:hover .container-border2 {
+        width: 220px; 
+        height: 220px;
+        top: 12px; 
+        left: 10px; 
+      }
+      
+      .expand-button {
+      position: absolute;
+      z-index: 3; 
+      top: 17px; 
+      right: 8px;
+      justify-content: center;
+      align-items: center; 
+      display: flex;
+      padding: -1px;
+      border: none;
+      display: none;
+      background-color: transparent;
+      border-radius: 0;
+      cursor: pointer; 
+      transition: all 0.3s ease;
+      }
+      
+      
+      .container-photo:hover .expand-button {
+      display: block;
+      }
+      
+      
+      .expand-button ion-icon {
+      font-size: 20px; 
+      color: var(--cyan);
+      }
+
 /*====================================== carousel  ====================================*/
 .container-carousel {
   position: absolute;
-  top: 270%; 
+  top: 280%; 
   left: 50%; 
   transform: translate(-50%, -50%); 
   width: 78%;
@@ -1690,9 +1833,9 @@ line-height: 1.5;
 
 .slide1-container {
   position: absolute;
-  top: 55%; /* Center vertically */
-  left: 50%; /* Center horizontally */
-  transform: translate(-50%, -50%); /* Adjust to perfectly center */
+  top: 55%; 
+  left: 50%; 
+  transform: translate(-50%, -50%);
   background-color: transparent;
   text-align: justify;
   width: 95%;
